<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quiz_stok_barang"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/etNamaBarang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/nama_barang"
        android:inputType="text" />

    <EditText
        android:id="@+id/etTotalStok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/total_stok_barang"
        android:inputType="number" />

    <EditText
        android:id="@+id/etBarangKeluar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/total_barang_keluar"
        android:inputType="number" />

    <Button
        android:id="@+id/btnTambah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tambah_data"
        android:layout_marginTop="12dp"/>

    <Button
        android:id="@+id/btnProses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/proses_data" />
    <Button
        android:id="@+id/btnKembali"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kembali_" />

    <TextView
        android:id="@+id/tvJudulHasil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hasil"
        android:textStyle=""
        android:textSize="18sp"
        android:paddingTop="24dp" />
    <TextView
        android:id="@+id/tvHasilQuiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="16sp"
        android:layout_marginTop="16dp"/>

</LinearLayout>
