<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uas"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/btnQuiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quiz"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/btnUas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/uas_"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/btnbasesatu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/base_satu"/>

</LinearLayout>
